syntax = "proto3";

package authPackage;
option go_package = "grpc/auth";

enum LoginCode {
  SUCCESS = 0;
  FAIL = 1;
};

service AuthService {
  rpc login(LoginRequest) returns (LoginResult);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResult {
  LoginCode loginCode = 1;
  optional string token = 2;
}